スマホ対応

--- a/css/style.css
+++ b/css/style.css
@@ -424,5 +424,74 @@ footer small {
   background-color: #c7ae81;
 }
 
-
 /*--</contact.html>--*/
+
+
+@media screen and (max-width : 767px){
+  img {
+    max-width: 100%;
+  }
+
+  header,
+  #global_navi,
+  #sidebar,
+  #wrapper{
+    width: 100%
+  }
+
+  header h1 {
+    float: none;
+    text-align: center;
+  }
+
+  header h1 img {
+    width: 50%;
+  }
+
+  header #header_contact {
+    display: none;
+  }
+
+  #global_navi ul li {
+    width: 50%;
+    padding: 0.5px;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  #global_navi ul li a {
+    margin: 0;
+  }
+
+  #global_navi ul li:last-child {
+    width: 100%;
+  }
+
+  #main {
+    width: 100%;
+    padding: 0.5%;
+    box-sizing: border-box;
+  }
+
+  #main_visual {
+    width: 100%;
+    height: auto;
+  }
+
+  #point figure {
+    float: none;
+    margin: 0 0 11px 0;
+    text-align: center;
+  }
+
+  #side_banner ul li {
+    text-align: center;
+    margin: 11px auto;
+  }
+
+  #side_contact address img {
+    width: 14px;
+    height: 20px;
+  }
+
+}
